# Asteroids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/app/libs/: CMakeLists.txt  game.cpp  game.hpp  input.hpp  main.cpp  vulkan_wrapper.cpp  vulkan_wrapper.hpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ntkinteractive/asteroids/: JoystickView.java  MainActivity.java  VkSurfaceView.java
android/app/src/main/res/layout/: activity_main.xml  sample_vk_surface_view.xml
android/app/src/main/res/values/: attrs_vk_surface_view.xml  styles.xml
android/app/src/main/res/values-night/: styles.xml
android/app/src/main/shaders/: actor.frag  actor.vert
android/gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  actor_frag.hpp  actor_vert.hpp  common_graphics.cpp  common_graphics.hpp  compute.cpp  compute.hpp  error.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  log.cpp  log.hpp  main.cpp  scene.cpp  scene.hpp  scene_graphics.cpp  scene_graphics.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp  vk_objects.cpp  vk_objects.hpp  vk_utils.cpp  vk_utils.hpp  vulkan_interface.cpp  vulkan_interface.hpp
src/shaders/: actor.vert  compile.bat  header_compile.bat
src/vk_objects/: vk_buffer.cpp  vk_buffer.hpp  vk_command_buffers.cpp  vk_command_buffers.hpp  vk_command_pool.cpp  vk_command_pool.hpp  vk_descriptor_pool.cpp  vk_descriptor_pool.hpp  vk_descriptor_set_layout.cpp  vk_descriptor_set_layout.hpp  vk_descriptor_sets.cpp  vk_descriptor_sets.hpp  vk_device_memory.cpp  vk_device_memory.hpp  vk_fence.cpp  vk_fence.hpp  vk_framebuffer.cpp  vk_framebuffer.hpp  vk_graphics_device.cpp  vk_graphics_device.hpp  vk_graphics_pipeline.cpp  vk_graphics_pipeline.hpp  vk_graphics_pipeline_layout.cpp  vk_graphics_pipeline_layout.hpp  vk_image.cpp  vk_image.hpp  vk_image_view.cpp  vk_image_view.hpp  vk_instance.cpp  vk_instance.hpp  vk_physical_device.cpp  vk_physical_device.hpp  vk_queue.cpp  vk_queue.hpp  vk_render_pass.cpp  vk_render_pass.hpp  vk_sampler.cpp  vk_sampler.hpp  vk_semaphore.cpp  vk_semaphore.hpp  (+7 more)
